--- a/Latex/Documentation.tex
+++ b/Latex/Documentation.tex
@@ -165,9 +165,11 @@ Il est important de noter que dans le cas d'une partie entre deux IA il faut cli
 
 \section{parse.scala ou les dangers de la PGN}
 
-\paragraph{L'objet \textit{Save} :} La sauvegarde de la partie en cours se fait via cet objet. Les méthodes sont internes pour la plupart. Il faut faire particulièrement attention à comment on récupère un mouvement. En effet, les deux méthodes à utiliser sont \textit{add\_move1} et \textit{add\_move2} et doivent être inserées dans la méthode \textit{get\_move} de toutes les sous-classes de player afin de récuperer les mouvements les uns aprés les autres. La première doit être placé juste avant l'application du mouvement, la deuxième après si le mouvement a bien eu lieux. La méthode à appeler pour sauvegarder une partie est \textit{write\_to\_file}.
+\paragraph{L'objet \textit{Save} :} La sauvegarde de la partie en cours se fait via cet objet. Les méthodes sont internes pour la plupart. Il faut faire particulièrement attention à comment on récupère un mouvement. En effet, les deux méthodes à utiliser sont \textit{add\_move1} et \textit{add\_move2} et doivent être insérées dans la méthode \textit{get\_move} de toutes les sous-classes de player afin de récupérer les mouvements les uns après les autres. La première doit être placé juste avant l'application du mouvement, la deuxième après si le mouvement a bien eu lieux. La méthode à appeler pour sauvegarder une partie est \textit{write\_to\_file}. \\
 
-\paragraph{L'objet \textit{Load} :} Cet objet a pour fonction de lire un fichier au format PGN (Portable Game Notation). Pour cela une méthode \textit{get\_list\_move\_from\_file} permet de récuperer la liste des mouvements (non encore parsés). Une fois cette liste établie, une partie peut être lancée avec comme joueur des \textit{Reproducers}. \textit{Reproducer} est une sous-classe de player et est un robot, en utilisant les règles du jeu définies dans Rules, il comprend le PGN. Il commence son tour en lisant la tête de l'attribut \textit{list\_of\_moves}, qui est un coup au format PGN. S'il y a ambiguïté il décide, en faisant appel a la méthode \textit{pre\_move} des piéces, quelle piéce doit bouger et applique le mouvement.
+Pour l'affichage de l'interface de sauvegarde deux menus sont présents. Tout d'abord un menu pour la
+
+\paragraph{L'objet \textit{Load} :} Cet objet a pour fonction de lire un fichier au format PGN (Portable Game Notation). Pour cela une méthode \textit{get\_list\_move\_from\_file} permet de récupérer la liste des mouvements (non encore parsés). Une fois cette liste établie, une partie peut être lancée avec comme joueur des \textit{Reproducers}. \textit{Reproducer} est une sous-classe de player et est un robot, en utilisant les règles du jeu définies dans Rules, il comprend le PGN. Il commence son tour en lisant la tête de l'attribut \textit{list\_of\_moves}, qui est un coup au format PGN. S'il y a ambiguïté il décide, en faisant appel a la méthode \textit{pre\_move} des pièces, quelle pièce doit bouger et applique le mouvement.
 
 \section{solve.scala ou l'intelligence limitée}
 
